--- a/README
+++ b/README
@@ -2,5 +2,6 @@
 5/19/14 RTK (update)
 11/23/14 RTK (update)
 12/3/14 RTK Add bash 
+9/23/19 RTK (update with current version of local files; Ubuntu 18.04)
 
 Some .config files
