--- a/README
+++ b/README
@@ -3,5 +3,14 @@
 11/23/14 RTK (update)
 12/3/14 RTK Add bash 
 9/23/19 RTK (update with current version of local files; Ubuntu 18.04)
+10/20/19 RTK; Update and sync for ubuntu and mac
 
 Some .config files
+
+#
+#   Call order:
+#       bash_profile
+#           bashrc
+#               bash_alias
+#               conda
+#
